--- a/Student/iAttend.Student/iAttend.Student/iAttend.Student/Views/StudentLandingPage.xaml
+++ b/Student/iAttend.Student/iAttend.Student/iAttend.Student/Views/StudentLandingPage.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-    x:Class="iAttend.Student.Views.LandingPage"
+    x:Class="iAttend.Student.Views.StudentLandingPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:fa="clr-namespace:iAttend.Student.Helpers"
