--- a/Student/iAttend.Student/iAttend.Student/iAttend.Student/Views/StudentLandingPage.xaml
+++ b/Student/iAttend.Student/iAttend.Student/iAttend.Student/Views/StudentLandingPage.xaml
@@ -80,24 +80,22 @@
                                 Margin="-10"
                                 Aspect="AspectFill"
                                 HeightRequest="140"
-                                Source="{Binding Instructor.Avatar}" />
+                                Source="{Binding Avatar}" />
 
                             <Label
                                 Margin="0,10,0,0"
                                 Style="{x:StaticResource HeaderTextSlim}"
-                                Text="{Binding Instructor.Name}" />
-                            <Label Style="{x:StaticResource subTextMed}" Text="{Binding Subject.Name}" />
+                                Text="{Binding Instructor}" />
+                            <Label Style="{x:StaticResource subTextMed}" Text="{Binding Subject}" />
                             <Label Style="{x:StaticResource subTextSmall}">
                                 <Label.FormattedText>
                                     <FormattedString>
-                                        <Span Text="{Binding Subject.Room}" />
+                                        <Span Text="{Binding Room}" />
                                         <Span Text=" | " />
-                                        <Span Text="{Binding Subject.Time}" />
+                                        <Span Text="{Binding Time}" />
                                     </FormattedString>
                                 </Label.FormattedText>
                             </Label>
-
-
                         </StackLayout>
                     </Frame>
                 </DataTemplate>
